# wlroots-android-bridge

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/xtr/compound/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/xtr/tinywl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xtr/compound/: MainActivity.kt  SurfaceService.kt  SurfaceViewActivity.kt  SurfaceViewActivityBundle.kt
app/src/main/java/com/xtr/compound/ui/theme/: Color.kt  SurfaceViewActivity.kt  Theme.kt  Type.kt
app/src/main/java/com/xtr/compound/ui/theme/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/xtr/tinywl/: InfoActivity.kt  MainActivity.kt  SurfaceService.kt  SurfaceViewActivity.kt  SurfaceViewActivityBundle.kt
app/src/main/java/com/xtr/tinywl/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/xtr/compound/: ExampleUnitTest.kt
app/src/test/java/com/xtr/tinywl/: ExampleUnitTest.kt
app/tinywl/: build.gradle.kts
app/tinywl/src/main/aidl/com/xtr/compound/: ITinywlCallback.aidl
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tinywl/: build.gradle.kts
tinywl/src/main/aidl/android/hardware/input/common/: Action.aidl  Button.aidl  Classification.aidl  EdgeFlag.aidl  Flag.aidl  Meta.aidl  MotionEvent.aidl  PointerCoords.aidl  PointerProperties.aidl  Source.aidl  ToolType.aidl  VideoFrame.aidl
tinywl/src/main/aidl/android/view/: Surface.aidl
tinywl/src/main/aidl/com/xtr/compound/: ITinywlCallback.aidl
tinywl/src/main/aidl/com/xtr/tinywl/: ITinywlCallback.aidl  ITinywlMain.aidl  ITinywlSurface.aidl  ITinywlXdgTopLevel.aidl  TinywlXdgTopLevelCallback.aidl  WlrBox.aidl  XdgTopLevel.aidl
tinywl/src/main/cpp/: CMakeLists.txt  input-queue.cpp  labwc.cpp  tinywl.cpp  tinywl_server.h  tinywl_server_stub.c
tinywl/src/main/cpp/aidl/android/hardware/input/common/: Axis.aidl  PolicyFlag.aidl  SourceClass.aidl
tinywl/src/main/cpp/aidl/com/xtr/compound/: ITinywlInput.aidl
tinywl/src/main/cpp/aidl/tinywl/: ITinywlInput.aidl
tinywl/src/main/java/com/xtr/compound/: ParcelableBinder.java  Tinywl.java
tinywl/src/main/java/com/xtr/tinywl/: Tinywl.java  Tinywl.kt
